syntax = "proto3";

package it.moneyverse.grpc;

option java_multiple_files = true;
option java_package = "it.moneyverse.grpc.lib";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc CheckIfUserExists (UserRequest) returns (UserResponse) {
  }
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  bool exists = 1;
}